Started to connect GUI and scheduler

--- a/PROJEKAT/GUIApp/GUIApp.csproj
+++ b/PROJEKAT/GUIApp/GUIApp.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JobCreationForm\JobCreationForm.csproj" />
+    <ProjectReference Include="..\PROJEKAT\PROJEKAT.csproj" />
+    <ProjectReference Include="..\TaskScheduler\TaskScheduler.csproj" />
   </ItemGroup>
 
 </Project>
