--- a/PROJEKAT/TaskScheduler/TaskScheduler.csproj
+++ b/PROJEKAT/TaskScheduler/TaskScheduler.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+    <PackageReference Include="Microsoft.TeamFoundationServer.ExtendedClient" Version="16.170.0" />
   </ItemGroup>
 
 </Project>
