--- a/PROJEKAT/PROJEKAT/PROJEKAT.csproj
+++ b/PROJEKAT/PROJEKAT/PROJEKAT.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
