--- a/PROJEKAT/GUIApp/GUIApp.csproj
+++ b/PROJEKAT/GUIApp/GUIApp.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DokanNet" Version="2.0.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PROJEKAT\PROJEKAT.csproj" />
     <ProjectReference Include="..\TaskScheduler\TaskScheduler.csproj" />
   </ItemGroup>
