--- a/PROJEKAT/TaskScheduler/TaskScheduler.csproj
+++ b/PROJEKAT/TaskScheduler/TaskScheduler.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DokanNet" Version="2.0.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
     <PackageReference Include="Microsoft.TeamFoundationServer.ExtendedClient" Version="16.170.0" />
   </ItemGroup>
